--- a/pedido-movel/package.json
+++ b/pedido-movel/package.json
@@ -31,6 +31,7 @@
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
         "ionic-angular": "3.3.0",
+        "angular-date-value-accessor": "0.0.2",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
         "rxjs": "5.1.1",
